--- a/CPP Module 04/ex03/Makefile
+++ b/CPP Module 04/ex03/Makefile
@@ -2,7 +2,7 @@
 #                                    MAIN                                     *
 #******************************************************************************
 
-NAME = I&F
+NAME = IF
 
 #******************************************************************************
 #                                 DIRECTORIES                                 *
